Migrating the metadata plugin from the old location
Old location: https://github.com/spring-cloud/spring-cloud-app-starters-maven-plugins/tree/master/spring-cloud-app-starter-metadata-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 
   	<modules>
 		<module>spring-cloud-dataflow-apps-generator-plugin</module>
+		<module>spring-cloud-dataflow-apps-metadata-plugin</module>
 	</modules>
 
 	<licenses>
