--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
   	<modules>
 		<module>spring-cloud-dataflow-apps-generator-plugin</module>
 		<module>spring-cloud-dataflow-apps-metadata-plugin</module>
+		<module>spring-cloud-dataflow-apps-docs-plugin</module>
 	</modules>
 
 	<licenses>
