--- a/applications/source/syslog-source/pom.xml
+++ b/applications/source/syslog-source/pom.xml
@@ -37,23 +37,26 @@
                 <groupId>org.springframework.cloud.stream.app.plugin</groupId>
                 <artifactId>spring-cloud-stream-app-maven-plugin</artifactId>
                 <configuration>
-                    <generatedApp>
+                    <application>
                         <name>syslog</name>
                         <type>source</type>
                         <version>${project.version}</version>
                         <configClass>org.springframework.cloud.fn.supplier.syslog.SyslogSupplierConfiguration.class</configClass>
-                    </generatedApp>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.springframework.cloud.fn</groupId>
-                            <artifactId>syslog-supplier</artifactId>
-                        </dependency>
-                        <dependency>
-                            <groupId>org.springframework.cloud.stream.app</groupId>
-                            <artifactId>stream-applications-composite-function-support</artifactId>
-                            <version>${stream-apps-core.version}</version>
-                        </dependency>
-                    </dependencies>
+
+                        <maven>
+                            <dependencies>
+                                <dependency>
+                                    <groupId>org.springframework.cloud.fn</groupId>
+                                    <artifactId>syslog-supplier</artifactId>
+                                </dependency>
+                                <dependency>
+                                    <groupId>org.springframework.cloud.stream.app</groupId>
+                                    <artifactId>stream-applications-composite-function-support</artifactId>
+                                    <version>${stream-apps-core.version}</version>
+                                </dependency>
+                            </dependencies>
+                        </maven>
+                    </application>
                 </configuration>
             </plugin>
         </plugins>
