--- a/applications/sink/wavefront-sink/pom.xml
+++ b/applications/sink/wavefront-sink/pom.xml
@@ -62,6 +62,9 @@
 								</dependency>
 							</dependencies>
 						</maven>
+						<containerImage>
+							<baseImage>${apps.base-image}</baseImage>
+						</containerImage>
 					</application>
 				</configuration>
 			</plugin>
