--- a/applications/source/http-source/pom.xml
+++ b/applications/source/http-source/pom.xml
@@ -71,6 +71,9 @@
                                 </dependency>
                             </dependencies>
                         </maven>
+                        <containerImage>
+                            <baseImage>${apps.base-image}</baseImage>
+                        </containerImage>
                     </application>
 
                 </configuration>
