--- a/applications/processor/aggregator-processor/pom.xml
+++ b/applications/processor/aggregator-processor/pom.xml
@@ -46,6 +46,9 @@
                                 </dependency>
                             </dependencies>
                         </maven>
+                        <containerImage>
+                            <baseImage>${apps.base-image}</baseImage>
+                        </containerImage>
                     </application>
                 </configuration>
             </plugin>
