--- a/applications/processor/bridge-processor/pom.xml
+++ b/applications/processor/bridge-processor/pom.xml
@@ -55,6 +55,9 @@
                                 </dependency>
                             </dependencies>
                         </maven>
+                        <containerImage>
+                            <baseImage>${apps.base-image}</baseImage>
+                        </containerImage>
                     </application>
                 </configuration>
             </plugin>
