--- a/applications/processor/script-processor/pom.xml
+++ b/applications/processor/script-processor/pom.xml
@@ -121,6 +121,9 @@
                                 </dependency>
                             </dependencies>
                         </maven>
+                        <containerImage>
+                            <baseImage>${apps.base-image}</baseImage>
+                        </containerImage>
                     </application>
                 </configuration>
             </plugin>
