--- a/applications/sink/twitter-update-sink/pom.xml
+++ b/applications/sink/twitter-update-sink/pom.xml
@@ -75,6 +75,9 @@
                                 </dependency>
                             </dependencies>
                         </maven>
+                        <containerImage>
+                            <baseImage>${apps.base-image}</baseImage>
+                        </containerImage>
                     </application>
                 </configuration>
             </plugin>
