--- a/applications/source/jms-source/pom.xml
+++ b/applications/source/jms-source/pom.xml
@@ -66,6 +66,9 @@
                                 </dependency>
                             </dependencies>
                         </maven>
+                        <containerImage>
+                            <baseImage>${apps.base-image}</baseImage>
+                        </containerImage>
                     </application>
                 </configuration>
             </plugin>
