--- a/applications/source/twitter-message-source/pom.xml
+++ b/applications/source/twitter-message-source/pom.xml
@@ -69,6 +69,9 @@
 								</dependency>
 							</dependencies>
 						</maven>
+						<containerImage>
+							<baseImage>${apps.base-image}</baseImage>
+						</containerImage>
 					</application>
 				</configuration>
 			</plugin>
