--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -17,6 +17,7 @@
     </parent>
 
     <properties>
+        <apps.base-image>springcloud/openjdk</apps.base-image>
         <java.version>1.8</java.version>
         <spring-boot.version>2.3.2.RELEASE</spring-boot.version>
         <stream-apps-core.version>${project.version}</stream-apps-core.version>
