--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -360,11 +360,11 @@
                                             <artifactId>stream-applications-security-common</artifactId>
                                             <version>${stream-apps-core.version}</version>
                                         </dependency>
-<!--                                        <dependency>-->
-<!--                                            <groupId>org.springframework.cloud.stream.app</groupId>-->
-<!--                                            <artifactId>stream-applications-micrometer-common</artifactId>-->
-<!--                                            <version>${stream-apps-core.version}</version>-->
-<!--                                        </dependency>-->
+                                        <dependency>
+                                            <groupId>org.springframework.cloud.stream.app</groupId>
+                                            <artifactId>stream-applications-micrometer-common</artifactId>
+                                            <version>${stream-apps-core.version}</version>
+                                        </dependency>
                                         <dependency>
                                             <groupId>org.springframework.cloud.stream.app</groupId>
                                             <artifactId>stream-applications-postprocessor-common</artifactId>
