Update metadata plugin version
The generated apps use a new version of the metadata plugin --
spring-cloud-dataflow-apps-metadata-plugin 1.0.0-SNAPSHOT.

--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -328,7 +328,7 @@
                                     <management.metrics.tags.application.guid>"${spring.cloud.application.guid:unknown}"</management.metrics.tags.application.guid>
                                 </properties>
                                 <metadata>
-                                    <mavenPluginVersion>2.0.2.BUILD-SNAPSHOT</mavenPluginVersion>
+                                    <mavenPluginVersion>1.0.0-SNAPSHOT</mavenPluginVersion>
                                 </metadata>
                                 <maven>
                                     <dependencyManagement>
