Use spring.cloud.function.definition

--- a/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app.properties
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app.properties
@@ -4,7 +4,7 @@ info.app.description=@project.description@
 info.app.version=@project.version@
 management.endpoints.web.exposure.include=health,info,bindings
 
-spring.cloud.stream.function.definition={{app.functionDefinition}}
+spring.cloud.function.definition={{app.functionDefinition}}
 
 {{#app.consumer}}
 spring.cloud.stream.function.bindings.{{app.functionDefinition}}-in-0=input
