Migrating Mail Source
 * Mail supplier for receiving email from a URL (IMAP/POP3)
 * Generating mail source apps
 * Migrating tests

--- a/applications/source/pom.xml
+++ b/applications/source/pom.xml
@@ -30,5 +30,6 @@
         <module>websocket-source</module>
         <module>cdc-debezium-source</module>
         <module>syslog-source</module>
+        <module>mail-source</module>
     </modules>
 </project>
