--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -425,6 +425,10 @@
                                             <groupId>org.springframework.boot</groupId>
                                             <artifactId>spring-boot-starter-security</artifactId>
                                         </dependency>
+                                        <dependency>
+                                            <groupId>com.jayway.jsonpath</groupId>
+                                            <artifactId>json-path</artifactId>
+                                        </dependency>
                                     </dependencies>
                                 </maven>
                             </application>
