Fixed build and READMEs

--- a/applications/source/ftp-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/source/ftp-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,3 +1,6 @@
 configuration-properties.classes=org.springframework.cloud.fn.supplier.ftp.FtpSupplierProperties, \
   org.springframework.cloud.fn.common.ftp.FtpSessionFactoryProperties, \
   org.springframework.cloud.fn.common.file.FileConsumerProperties
+configuration-properties.names=\
+  metadata.store.type
+
