--- a/applications/source/s3-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/s3-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,3 +1,6 @@
 configuration-properties.classes=org.springframework.cloud.fn.supplier.s3.AwsS3SupplierProperties,\
   org.springframework.cloud.fn.common.file.FileConsumerProperties,\
   org.springframework.cloud.fn.common.aws.s3.AmazonS3Properties
+configuration-properties.names=\
+  metadata.store.type
+
