--- a/applications/source/sftp-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/sftp-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,3 +1,6 @@
 configuration-properties.classes=org.springframework.cloud.fn.supplier.sftp.SftpSupplierProperties, \
   org.springframework.cloud.fn.supplier.sftp.SftpSupplierProperties$Factory,\
   org.springframework.cloud.fn.common.file.FileConsumerProperties
+configuration-properties.names=\
+  metadata.store.type
+
