--- a/applications/stream-applications-core/common/stream-applications-micrometer-common/pom.xml
+++ b/applications/stream-applications-core/common/stream-applications-micrometer-common/pom.xml
@@ -8,8 +8,26 @@
         <version>3.0.0-SNAPSHOT</version>
         <relativePath>../..</relativePath>
     </parent>
+    <properties>
+        <jmockit.version>1.49</jmockit.version>
+	</properties>
+
     <modelVersion>4.0.0</modelVersion>
     <artifactId>stream-applications-micrometer-common</artifactId>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}"/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+
+    </build>
 
     <dependencies>
         <dependency>
@@ -25,7 +43,18 @@
             <groupId>io.pivotal.cfenv</groupId>
             <artifactId>java-cfenv-test-support</artifactId>
             <scope>test</scope>
-            <version>2.1.1.RELEASE</version>
+            <version>2.2.2.RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jmockit</groupId>
+                    <artifactId>jmockit</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>${jmockit.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
