--- a/applications/source/sftp-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/sftp-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,6 +1,10 @@
 configuration-properties.classes=org.springframework.cloud.fn.supplier.sftp.SftpSupplierProperties, \
   org.springframework.cloud.fn.supplier.sftp.SftpSupplierProperties$Factory,\
-  org.springframework.cloud.fn.common.file.FileConsumerProperties
-configuration-properties.names=\
-  metadata.store.type
-
+  org.springframework.cloud.fn.common.file.FileConsumerProperties, \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties, \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Gemfire, \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Redis, \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$DynamoDb, \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Jdbc, \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Zookeeper, \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Mongo \
