RSocket consumer/sink
* This RSocket consumer is using the fire-and-forget strategy of execution.
* Generating the corresponding sink.
* Addressing the original PR review comments from
  https://github.com/spring-cloud/stream-applications/pull/116

--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -32,5 +32,6 @@
         <module>twitter-message-sink</module>
         <module>wavefront-sink</module>
         <module>pgcopy-sink</module>
+        <module>rsocket-sink</module>
     </modules>
 </project>
