--- a/applications/source/ftp-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/ftp-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,3 +1,10 @@
 configuration-properties.classes=org.springframework.cloud.fn.supplier.ftp.FtpSupplierProperties, \
   org.springframework.cloud.fn.common.ftp.FtpSessionFactoryProperties, \
-  org.springframework.cloud.fn.common.file.FileConsumerProperties
+  org.springframework.cloud.fn.common.file.FileConsumerProperties, \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties, \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Gemfire, \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Redis, \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$DynamoDb, \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Jdbc, \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Zookeeper, \
+  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Mongo \
