RSocket consumer/sink
This RSocket consumer is using the fire-and-forget model of execution.
Generating the corresponding sink.

--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -31,5 +31,6 @@
         <module>twitter-update-sink</module>
         <module>twitter-message-sink</module>
         <module>wavefront-sink</module>
+        <module>rsocket-sink</module>
     </modules>
 </project>
