--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -31,5 +31,6 @@
         <module>twitter-update-sink</module>
         <module>twitter-message-sink</module>
         <module>wavefront-sink</module>
+        <module>pgcopy-sink</module>
     </modules>
 </project>
