update the default baseimage references

--- a/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
@@ -134,7 +134,7 @@
 											<configuration>
 												<![CDATA[
 													<from>
-														<image>springcloud/openjdk</image>
+														<image>springcloud/baseimage:1.0.0</image>
 													</from>
 													<to>
 														<image>springcloudstream:${project.artifactId}</image>
