--- a/functions/spring-functions-parent/pom.xml
+++ b/functions/spring-functions-parent/pom.xml
@@ -18,9 +18,17 @@
 		<spring-boot.version>2.3.2.RELEASE</spring-boot.version>
 		<spring-cloud-function.version>3.0.9.RELEASE</spring-cloud-function.version>
 		<spring-cloud-fn.version>${project.version}</spring-cloud-fn.version>
+		<spring-integration-dependencies.version>5.3.3.BUILD-SNAPSHOT</spring-integration-dependencies.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>org.springframework.integration</groupId>
+				<artifactId>spring-integration-bom</artifactId>
+				<version>${spring-integration-dependencies.version}</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-parent</artifactId>
