--- a/applications/sink/s3-sink/pom.xml
+++ b/applications/sink/s3-sink/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>spring-integration-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
