--- a/functions/common/cdc-debezium-common/pom.xml
+++ b/functions/common/cdc-debezium-common/pom.xml
@@ -3,14 +3,14 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>cdc-debezium-common</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-M3</version>
 	<name>cdc-debezium-common</name>
 	<description>Change Data Capture (CDC) Debezium Common</description>
 
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
 		<artifactId>spring-functions-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0-M3</version>
 		<relativePath>../../spring-functions-parent</relativePath>
 	</parent>
 
