--- a/functions/function-dependencies/pom.xml
+++ b/functions/function-dependencies/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>java-functions-parent</artifactId>
         <groupId>org.springframework.cloud.fn</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0-M3</version>
         <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
