--- a/functions/spring-functions-parent/pom.xml
+++ b/functions/spring-functions-parent/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<artifactId>java-functions-parent</artifactId>
 		<groupId>org.springframework.cloud.fn</groupId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0-M3</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>spring-functions-parent</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-M3</version>
 	<packaging>pom</packaging>
 
 	<properties>
