--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.springframework.cloud</groupId>
 	<artifactId>spring-cloud-dataflow-apps-plugin-parent</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-M1</version>
 	<name>spring-cloud-dataflow-apps-plugin-parent</name>
 	<description>Spring Cloud Dataflow Apps Plugin Parent</description>
 	<packaging>pom</packaging>
