--- a/spring-cloud-dataflow-apps-docs-plugin/pom.xml
+++ b/spring-cloud-dataflow-apps-docs-plugin/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-dataflow-apps-plugin-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0-M1</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-dataflow-configuration-metadata</artifactId>
-			<version>2.7.0-SNAPSHOT</version>
+			<version>2.7.0-M1</version>
 		</dependency>
 
 		<dependency>
